# vmailmgr

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.CVS  README.GIT  README.SVN  TODO  acconfig.h  acinclude.m4  configure.ac  configure.in  makedist.in  spec
authenticate/: Makefile.am  authvlib.cc  authvlib.h  authvmailmgr.cc  checkvpw.cc  checkvpw.pod  vauthenticate.cc  vauthenticate.pod
cgi/: Makefile.am  listvdomain.cc  listvdomain.html  vaddalias.cc  vaddalias.html  vadduser.cc  vadduser.html  vchalias.cc  vchalias.html  vchattr.cc  vchattr.html  vchforwards.cc  vchforwards.html  vdeluser.cc  vdeluser.html  vpasswd.cc  vpasswd.html
commands/: Makefile.am  allvpasswd2cdb  allvpasswd2db  dumpvuser.cc  listvdomain.cc  vaddalias  vadduser.cc  vaddusers.cc  vchattr.cc  vcheckquota.cc  vchforwards.cc  vcommand.cc  vcommand.h  vconf2dir  vdeliver.cc  vdeluser.cc  vpasswd.cc  vpasswd2cdb.cc  vpasswd2db.cc  vpasswds.cc  vpopbull.cc  vquota.cc  vrehash.cc  vsetup.cc  vupgrade-all  vupgrade.cc
daemon/: Makefile.am  addalias.cc  addaliasp.cc  adduser.cc  adduser2.cc  autoresponse.cc  chattr.cc  check.cc  command.cc  command.h  daemon.h  deluser.cc  dispatch.cc  fork.cc  init  listdomain.cc  log.cc  log.h  lookup.cc  lookup_baseuser.cc  lookup_validate.cc  main.cc  run-svc  stat.cc  state.cc  state.h
doc/: ChangeLog-pre-0.70  ChangeLog-pre-vmailmgr  FAQ.sgml  FAQ.texi  HOWTO.sgml  HOWTO.texi  Makefile.am  TODO  YEAR2000  changelog2html.pl  checkvpw.pod  configuration.texi  news2html.pl  protocol-new.txt  protocol.txt  record-format.txt  translation.fig  vadduser.pod  vaddusers.pod  vchattr.pod  vdeliver.pod  vdeluser.pod  vmailmgr-cgi.texi  vmailmgr.pod  vmailmgrd.pod  vpasswd.pod  vpasswd5.pod  vpasswds.pod  vpopbull.pod  vrehash.pod  vsetup.pod
include/: mutex.h
lib/: Makefile.am  mergelib.sh
lib/config/: Makefile.am  Makefile.am.in  build-config.sh  config_read.cc  configio.h  configrc.cc  configrc.h  configrc.h.in  configrc.in  configvar.in  read_dir.cc  read_list.cc  read_str.cc  read_uns.cc  showvconfig.cc.in
lib/courier-authlib/: Makefile.am  README  auth.h  authexit.c  authmod.c  authmod.h  authmodfail.c  authwait.h  chain.c  changeuidgid.c  copyargv.c  success.c
lib/fdbuf/: fdbuf.h
lib/misc/: Makefile.am  autodelete.h  crc32.cc  crc32.h  crc_hash.h  debug.h  errors.cc  errors.h  exec.cc  exec.h  hash_table.h  itoa.cc  itoa.h  keystrlist.cc  krbauth.c  list_table.cc  list_table.h  lookup.h  lookup_baseuser.cc  lookup_domain.cc  mailbox.cc  maildir.cc  maildir.h  map_table.cc  map_table.h  passwdfn.cc  passwdfn.h  pwcrypt.cc  pwcrypt.h  pwentry.cc  pwentry.h  pwentry_auth.cc  pwentry_export_env.cc  pwentry_table.cc  pwentry_table.h  response.h  response_message.cc  response_read.cc  response_write.cc  server.cc  (+42 more)
lib/vdomain/: Makefile.am  chattr.cc  chpass.cc  deluser.cc  lookup.cc  set.cc  userdir.cc  validate.cc  vdomain.cc  vdomain.h
lib/vpwentry/: Makefile.am  auth.cc  decode.cc  defaults.cc  export_env.cc  from.cc  from_old.cc  from_uint.cc  from_ver1.cc  from_ver2.cc  new.cc  to.cc  vpwentry.cc  vpwentry.h
lib/vpwtable/: Makefile.am  cdb_del.cc  cdb_exists.cc  cdb_get.cc  cdb_getbyname.cc  cdb_put.cc  cdb_read.cc  cdb_vpwtable.cc  cdb_write.cc  gdbm_del.cc  gdbm_exists.cc  gdbm_get.cc  gdbm_getbyname.cc  gdbm_put.cc  gdbm_read.cc  gdbm_vpwtable.cc  gdbm_write.cc  get.cc  getbyname.cc  put.cc  reader.cc  vpwtable.cc  vpwtable.h  writer.cc
php/: Makefile.am  vmail.features  vmail.inc
php3/: vmail.features  vmail.inc
pyadmin/: Makefile.am  TODO  notes.txt  syntax.txt  vmailmgr_lib.py  vmailmgr_parser.py  vmailmgr_pyadmin.py  vmailmgr_sessiond.py
pyadmin/templates/: BAD.html  adduser.vhtml  confirm-deluser.vhtml  connection-failed.vhtml  deluser.vhtml  disable-autoresponse.http  disable-autoresponse.vhtml  enable-autoresponse.html  enable-autoresponse.http  enable-autoresponse.vhtml  index.html  index.vhtml  login-failed.html  login-failed.vhtml  login-form.html  login-form.vhtml  user.html  user.vhtml  write-autoresponse.http  write-autoresponse.vhtml
python/: Makefile.am  commands.py  config.py  constants.py  daemon.py  types.py  vautoresponse-error.html  vautoresponse-success.html  vautoresponse.html  vautoresponse.in  vcommand.in  vcommand.py  vmailmgr.py.in  vmailmgr_cgi.py.in
scripts/: Makefile.am  autoresponder.sh  vmailmgrd-log.run  vmailmgrd.run  vmailmgrd.svc
